--- a/style.css
+++ b/style.css
@@ -29,6 +29,22 @@
     color: white;
   }
 
+  .icones {
+    display: none;
+    cursor: pointer; 
+  }
+
+  .botao {
+    color: #FF6C19;
+    border: none;
+    background: none;
+    padding-right: 10px;
+  }
+
+  .material-icons.md-48 {
+    font-size: 34px;
+  }
+
   nav {
     display: flex;
     justify-content: space-around;
@@ -552,22 +568,52 @@
 
   @media screen and (max-device-width: 1000px) {
 
-    .menu-lista {
-      display: none;
-    }
 
     .bt-um {
       display: none;
     }
 
-    nav {
+    .logo {
+      width: 40px;
+    }
+
+    .icones {
+      display: flex;
+      justify-content: right;
+      margin-top: -40px;
+      padding-right: 10px;
+    }
+
+    .menu-lista {
       display: none;
     }
+
+    .menu-lista {
+      height: 100vh;
+      padding-top: 100px;
+    }
+
+    .menu-item {
+      display: inline-block;
+    }
+
+    nav {
+      display: block;
+      justify-content: space-around;
+      align-items: center;
+      padding-top: 10px;
+      border-bottom: solid 0.1px rgba(255, 123, 0, 0.256);
+      padding-bottom: 20px;
+      width: 100%;
+      margin-left: 10px;
+    }
+
 
     .section-um {
       display: grid;
       align-items: center;
       padding-left: 0;
+      padding-top: 20px;
     }
 
     .titulo-um {
