--- a/style.css
+++ b/style.css
@@ -599,12 +599,12 @@
 
     nav {
       display: block;
-      justify-content: space-around;
+      justify-content: space-between;
       align-items: center;
       padding-top: 10px;
       border-bottom: solid 0.1px rgba(255, 123, 0, 0.256);
       padding-bottom: 20px;
-      width: 90%;
+      width: 100%;
       margin-left: 10px;
     }
 
