--- a/style.css
+++ b/style.css
@@ -599,13 +599,11 @@
 
     nav {
       display: block;
-      justify-content: space-between;
-      align-items: center;
       padding-top: 10px;
       border-bottom: solid 0.1px rgba(255, 123, 0, 0.256);
       padding-bottom: 20px;
       width: 100%;
-      margin-left: 10px;
+      margin-left: 0;
     }
 
 
