--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@
     align-items: center;
     padding-top: 50px;
     border-bottom: solid 0.1px rgba(255, 123, 0, 0.256);
+    border-image: linear-gradient(to right, transparent, #E27815, transparent) 1;
     padding-bottom: 50px;
     width: 80%;
     margin-left: 100px;
@@ -181,6 +182,7 @@
     gap: 200px;
     justify-content: center;
     border-bottom: solid 0.1px rgba(255, 123, 0, 0.571);
+    border-image: linear-gradient(to right, transparent, #E27815, transparent) 1;
     border-top: solid 0.1px rgba(255, 123, 0, 0.343);
     margin-top: 0;
     padding-top: 30px;
@@ -210,6 +212,7 @@
 
   .texto-tres {
     border-bottom: solid 0.1px rgba(255, 123, 0, 0.571);
+    border-image: linear-gradient(to right, transparent, #E27815, transparent) 1;
     padding-bottom: 50px;
     height: 600px;
     width: 300px;
@@ -379,6 +382,7 @@
 
   .texto-icone-sobre {
     border-bottom: solid 0.1px rgba(255, 123, 0, 0.256);
+    border-image: linear-gradient(to right, transparent, #E27815, transparent) 1;
     line-height: 5em;
     width: 600px;
   }
@@ -498,6 +502,7 @@
     padding-top: 1em;
     line-height: 1.5em;
     border-bottom: solid 0.1px rgba(255, 123, 0, 0.256);
+    border-image: linear-gradient(to right, transparent, #E27815, transparent) 1;
     padding-bottom: 1em;
   }
 
@@ -533,6 +538,7 @@
     gap: 60px;
     border-bottom: solid 0.1px rgba(255, 123, 0, 0.256);
     border-top: solid 0.1px rgba(255, 123, 0, 0.256);
+    border-image: linear-gradient(to right, transparent, #E27815, transparent) 1;
     margin-top: 100px;
     padding-top: 100px;
     padding-bottom: 100px;
