--- a/style.css
+++ b/style.css
@@ -881,13 +881,14 @@
       display: grid;
       padding-left: 0;
       padding-right: 20px;
+      padding-left: 0;
       gap: 10px;
     }
 
     .titulo-blog {
       font-size: 32px;
       font-weight: 200;
-      padding-right: 0;
+      padding-right: 70px;
     }
 
     .card-blog {
