--- a/style.css
+++ b/style.css
@@ -423,11 +423,12 @@
   }
 
   .bt-ver-mais {
-    color: #91ADBA;
+    color: white;
     background: none;
-    font-size: 16px;
+    font-size: 18px;
     cursor: pointer;
     padding-top: 10px;
+    font-weight: 200;
 
   }
 
