ajuste lineheight footer e ajuste depoimentos

--- a/style.css
+++ b/style.css
@@ -975,6 +975,12 @@
   
     }
 
+    .texto-footer {
+      font-size: 35px;
+      font-weight: 200;
+      line-height: 1.2em;
+    }
+
     .copy {
       display: grid;
       justify-content: left;
