--- a/style.css
+++ b/style.css
@@ -585,6 +585,10 @@
     padding-right: 30px;
     padding-left: 30px;
   }
+
+  .copy a {
+    color: white;
+  }
   
 
   @media screen and (max-device-width: 1000px) {
@@ -991,6 +995,7 @@
       padding-left: 20px;
       gap: 5px;
     }
+
 
     
 
