ajuste legenda suporte mobile

--- a/style.css
+++ b/style.css
@@ -759,6 +759,7 @@
     .legenda-servico-branco {
       text-align: center;
       margin-top: -20px;
+      font-size: 12px;
     }
 
     .servico {
