ajuste de altura do menu lista e espaço lateral

--- a/style.css
+++ b/style.css
@@ -618,8 +618,8 @@
     }
 
     .menu-lista {
-      height: 100vh;
-      padding-top: 100px;
+      padding-top: 20px;
+      padding-left: 20px;
     }
 
     .menu-item {
