--- a/style.css
+++ b/style.css
@@ -29,6 +29,18 @@
     color: white;
   }
 
+  .topo {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    cursor: pointer;
+    width: 40px;
+    border: black solid 1px;
+    border-radius: 100%;
+  }
+
   .icones {
     display: none;
     cursor: pointer; 
@@ -618,7 +630,7 @@
     }
 
     .menu-lista {
-      padding-top: 20px;
+      padding-top: 50px;
       padding-left: 20px;
     }
 
@@ -628,7 +640,6 @@
 
     nav {
       display: block;
-      position: fixed;
       background-color: black;
       padding-top: 10px;
       border-bottom: solid 0.1px rgba(255, 123, 0, 0.256);
