--- a/style.css
+++ b/style.css
@@ -37,7 +37,6 @@
     margin-bottom: 10px;
     cursor: pointer;
     width: 40px;
-    border: black solid 1px;
     border-radius: 100%;
   }
 
@@ -488,6 +487,11 @@
     font-size: 48px;
     font-weight: 600;
     padding-left: 360px;
+  }
+
+  .img-cliente {
+    width: 70px;
+    border-radius: 100%;
   }
 
   .card-cliente {
