ajuste footer mobile

--- a/style.css
+++ b/style.css
@@ -992,6 +992,10 @@
   
     }
 
+    .footer-tres {
+      display: none;
+    }
+
     .texto-footer {
       font-size: 35px;
       font-weight: 200;
