--- a/style.css
+++ b/style.css
@@ -62,7 +62,8 @@
 
   nav {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 150px;
     align-items: center;
     padding-top: 50px;
     border-bottom: solid 0.1px rgba(255, 123, 0, 0.256);
@@ -131,7 +132,7 @@
     align-items: center;
     justify-content: center;
     padding-left: 0;
-    gap: 300px;
+    gap: 100px;
   }
 
   .img-principal {
