--- a/style.css
+++ b/style.css
@@ -722,7 +722,7 @@
     .img-principal {
       text-align: center;
       width: 100%;
-      height: auto;
+      height: 400px;
       text-align: center;
       padding-left: 20px;
     }
