--- a/style.css
+++ b/style.css
@@ -139,6 +139,10 @@
     background-repeat: no-repeat;
     background-position: right;
   }
+
+  .div-img-principal {
+    text-align: center;
+  }
   
 
   .titulo-um {
@@ -721,10 +725,10 @@
 
     .img-principal {
       text-align: center;
-      width: 100%;
-      height: auto;
       text-align: center;
       padding-left: 20px;
+      height: 400px;
+      width: 375px;
     }
 
     .section-dois {
