--- a/style.css
+++ b/style.css
@@ -413,6 +413,11 @@
     font-weight: 600;
   }
 
+  .legenda-servico-branco {
+    text-align: center;
+    padding-top: 10px;
+  } 
+
   .icones-sobre {
     font-weight: bold;
     font-size: 20px;
