--- a/style.css
+++ b/style.css
@@ -498,6 +498,10 @@
     gap: 60px;
     padding-top: 100px;
   }
+  .texto-ver-mais {
+    width: 300px;
+    padding-top: 10px;
+  }
 
   .titulo-card-blog {
     font-weight: 200;
@@ -697,6 +701,7 @@
       font-weight: 600;
       text-align: center;
       width: 100%;
+      padding: 0 20px 0 20px;
     }
 
     .texto-um {
@@ -706,6 +711,12 @@
       text-align: center;
       padding: 0px 30px 0px 30px;
     }
+
+    .box-texto-um {
+      display: flex;
+      justify-content: center;
+    }
+
 
     .botoes {
       display: flex;
@@ -824,8 +835,8 @@
       align-items: center;
       text-align: center;
       padding-top: 50px;
-      grid-template-columns: 90%;
       gap: 2em;
+      padding: 30px 10px 0px 10px;
     }
 
     .card-servico {
@@ -944,8 +955,11 @@
     .blog {
       background-color: #EA6400;
       padding-top: 100px;
-      height: 2000px;
+      height: 2070px;
       margin-top: 100px;
+      padding-left: 10px;
+      padding-right: 10px;
+      padding-bottom: 100px;
     }
 
     .texto-blog {
@@ -970,8 +984,7 @@
     }
 
     .img-blog {
-      width: 340px;
-
+      width: 100%;
     }
 
     .titulo-cliente {
