--- a/style.css
+++ b/style.css
@@ -873,6 +873,7 @@
       overflow: hidden;
       margin-top: 100px;
       text-align: center;
+      padding: 0px 25px 0px 25px;
     }
 
     .titulo-suporte {
@@ -913,7 +914,8 @@
     }
 
     .img-iphone {
-      width: 380px;
+      width: 100%;
+      padding-right: 20px;
     }
 
     .texto-sobre {
